--- a/accounts.properties
+++ b/accounts.properties
@@ -1,9 +1,9 @@
-accounts.msg =Welcome to the EazyBank Accounts Default application
+accounts.msg =Welcome to the Maybank Accounts Default application
 accounts.build-version=3
 
-accounts.mailDetails.hostName=default-accounts@eazybytes.com
+accounts.mailDetails.hostName=default-accounts@shafiq.com
 accounts.mailDetails.port=9000
-accounts.mailDetails.from=default-accounts@eazybytes.com
+accounts.mailDetails.from=default-accounts@shafiq.com
 accounts.mailDetails.subject=Your Account Details from Eazy Bank Default Environment
 
 accounts.activeBranches[0]=Mumbai
