--- a/cards-dev.properties
+++ b/cards-dev.properties
@@ -1,11 +1,11 @@
-cards.msg =Welcome to the EazyBank Cards Dev application
+cards.msg =Welcome to the Maybank Cards Dev application
 cards.build-version=2
 
-cards.mailDetails.hostName=dev-cards@eazybytes.com
+cards.mailDetails.hostName=dev-cards@shafiq.com
 cards.mailDetails.port=9022
-cards.mailDetails.from=dev-cards@eazybytes.com
+cards.mailDetails.from=dev-cards@shafiq.com
 cards.mailDetails.subject=Your Card Details from Eazy Bank Dev Environment
 
-cards.activeBranches[0]=Chennai
-cards.activeBranches[1]=Berlin
-cards.activeBranches[2]=Indianapollis
+cards.activeBranches[0]=Malaysia
+cards.activeBranches[1]=Singapore
+cards.activeBranches[2]=London
