--- a/loans-dev.properties
+++ b/loans-dev.properties
@@ -1,11 +1,11 @@
-loans.msg =Welcome to the EazyBank Loans Dev application
+loans.msg =Welcome to the Maybank Loans Dev application
 loans.build-version=2
 
-loans.mailDetails.hostName=dev-loans@eazybytes.com
+loans.mailDetails.hostName=dev-loans@shafiq.com
 loans.mailDetails.port=9021
-loans.mailDetails.from=dev-loans@eazybytes.com
+loans.mailDetails.from=dev-loans@shafiq.com
 loans.mailDetails.subject=Your Loan Details from Eazy Bank Dev Environment
 
-loans.activeBranches[0]=Chennai
-loans.activeBranches[1]=Berlin
-loans.activeBranches[2]=Indianapollis
+loans.activeBranches[0]=Malaysia
+loans.activeBranches[1]=Singapore
+loans.activeBranches[2]=London
