--- a/accounts-dev.properties
+++ b/accounts-dev.properties
@@ -1,11 +1,11 @@
-accounts.msg =Welcome to the EazyBank Accounts Dev application
+accounts.msg =Welcome to the Maybank Accounts Dev application
 accounts.build-version=2
 
-accounts.mailDetails.hostName=dev-accounts@eazybytes.com
+accounts.mailDetails.hostName=dev-accounts@shafiq.com
 accounts.mailDetails.port=9020
-accounts.mailDetails.from=dev-accounts@eazybytes.com
+accounts.mailDetails.from=dev-accounts@shafiq.com
 accounts.mailDetails.subject=Your Account Details from Eazy Bank Dev Environment
 
-accounts.activeBranches[0]=Chennai
-accounts.activeBranches[1]=Berlin
-accounts.activeBranches[2]=Indianapollis
+accounts.activeBranches[0]=Malaysia
+accounts.activeBranches[1]=Singapore
+accounts.activeBranches[2]=London
