--- a/cards-prod.properties
+++ b/cards-prod.properties
@@ -1,9 +1,9 @@
-cards.msg =Welcome to the EazyBank Cards Prod application
+cards.msg =Welcome to the Maybank Cards Prod application
 cards.build-version=1
 
-cards.mailDetails.hostName=prod-cards@eazybytes.com
+cards.mailDetails.hostName=prod-cards@shafiq.com
 cards.mailDetails.port=9012
-cards.mailDetails.from=prod-cards@eazybytes.com
+cards.mailDetails.from=prod-cards@shafiq.com
 cards.mailDetails.subject=Your Card Details from Eazy Bank Production Environment
 
 cards.activeBranches[0]=Hyderabad
