--- a/loans-prod.properties
+++ b/loans-prod.properties
@@ -1,9 +1,9 @@
-loans.msg =Welcome to the EazyBank Loans Prod application
+loans.msg =Welcome to the Maybank Loans Prod application
 loans.build-version=1
 
-loans.mailDetails.hostName=prod-loans@eazybytes.com
+loans.mailDetails.hostName=prod-loans@shafiq.com
 loans.mailDetails.port=9011
-loans.mailDetails.from=prod-loans@eazybytes.com
+loans.mailDetails.from=prod-loans@shafiq.com
 loans.mailDetails.subject=Your Loan Details from Eazy Bank Production Environment
 
 loans.activeBranches[0]=Hyderabad
