--- a/accounts-dev.properties
+++ b/accounts-dev.properties
@@ -4,7 +4,7 @@ accounts.build-version=2
 accounts.mailDetails.hostName=dev-accounts@shafiq.com
 accounts.mailDetails.port=9020
 accounts.mailDetails.from=dev-accounts@shafiq.com
-accounts.mailDetails.subject=Your Account Details from Eazy Bank Dev Environment
+accounts.mailDetails.subject=Your Account Details from Maybank Dev Environment
 
 accounts.activeBranches[0]=Malaysia
 accounts.activeBranches[1]=Singapore
