--- a/accounts-prod.properties
+++ b/accounts-prod.properties
@@ -4,7 +4,7 @@ accounts.build-version=1
 accounts.mailDetails.hostName=prod-accounts@shafiq.com
 accounts.mailDetails.port=9010
 accounts.mailDetails.from=prod-accounts@shafiq.com
-accounts.mailDetails.subject=Your Account Details from Eazy Bank Production Environment
+accounts.mailDetails.subject=Your Account Details from Maybank Production Environment
 
 accounts.activeBranches[0]=Hyderabad
 accounts.activeBranches[1]=Paris
