--- a/accounts.properties
+++ b/accounts.properties
@@ -4,7 +4,7 @@ accounts.build-version=3
 accounts.mailDetails.hostName=default-accounts@shafiq.com
 accounts.mailDetails.port=9000
 accounts.mailDetails.from=default-accounts@shafiq.com
-accounts.mailDetails.subject=Your Account Details from Eazy Bank Default Environment
+accounts.mailDetails.subject=Your Account Details from Maybank Default Environment
 
 accounts.activeBranches[0]=Mumbai
 accounts.activeBranches[1]=London
