--- a/cards-prod.properties
+++ b/cards-prod.properties
@@ -4,7 +4,7 @@ cards.build-version=1
 cards.mailDetails.hostName=prod-cards@shafiq.com
 cards.mailDetails.port=9012
 cards.mailDetails.from=prod-cards@shafiq.com
-cards.mailDetails.subject=Your Card Details from Eazy Bank Production Environment
+cards.mailDetails.subject=Your Card Details from Maybank Production Environment
 
 cards.activeBranches[0]=Hyderabad
 cards.activeBranches[1]=Paris
