--- a/cards.properties
+++ b/cards.properties
@@ -4,7 +4,7 @@ cards.build-version=3
 cards.mailDetails.hostName=default-cards@shafiq.com
 cards.mailDetails.port=9002
 cards.mailDetails.from=default-cards@shafiq.com
-cards.mailDetails.subject=Your Card Details from Eazy Bank Default Environment
+cards.mailDetails.subject=Your Card Details from Maybank Default Environment
 
 cards.activeBranches[0]=Mumbai
 cards.activeBranches[1]=London
