--- a/loans-dev.properties
+++ b/loans-dev.properties
@@ -4,7 +4,7 @@ loans.build-version=2
 loans.mailDetails.hostName=dev-loans@shafiq.com
 loans.mailDetails.port=9021
 loans.mailDetails.from=dev-loans@shafiq.com
-loans.mailDetails.subject=Your Loan Details from Eazy Bank Dev Environment
+loans.mailDetails.subject=Your Loan Details from Maybank Dev Environment
 
 loans.activeBranches[0]=Malaysia
 loans.activeBranches[1]=Singapore
