--- a/loans.properties
+++ b/loans.properties
@@ -4,7 +4,7 @@ loans.build-version=3
 loans.mailDetails.hostName=default-loans@shafiq.com
 loans.mailDetails.port=9001
 loans.mailDetails.from=default-loans@shafiq.com
-loans.mailDetails.subject=Your Loan Details from Eazy Bank Default Environment
+loans.mailDetails.subject=Your Loan Details from Maybank Default Environment
 
 loans.activeBranches[0]=Mumbai
 loans.activeBranches[1]=London
